--- a/src/components/ThemeToggle/ThemeToggle.module.css
+++ b/src/components/ThemeToggle/ThemeToggle.module.css
@@ -1,11 +1,12 @@
 .ThemeBtn {
-    color: var(--black);
-    background-color: var(--light);
+    color: var(--text-color);
+    background-color: var(--background-color);
     visibility: visible;
     font-weight: bold;
+    box-shadow: 0 0 10px var(--text-color2) !important;
 }
 
 .ThemeBtn:hover {
-    color: var(--black);
-    background-color: var(--light);
+    color: var(--text-color);
+    background-color: var(--background-color);
 }
