--- a/src/components/Facts/Facts.module.css
+++ b/src/components/Facts/Facts.module.css
@@ -14,13 +14,18 @@
         right 0px bottom 0px,
         center center;
     background-repeat: no-repeat;
+    background-color: var(--primary-color) !important;
     animation-name: fadeInUp;
 }
 
 .Animate {
     animation-name: fadeIn;
+    color: var(--accent-color) !important;
 }
 
+.TextColor {
+    color: var(--surface-color) !important;
+}
 @keyframes fadeInUp {
     0% {
         opacity: 0;
