--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,8 +3,8 @@
     margin-top: 6rem;
     padding-top: 9rem;
     background:
-        url(../img/bg-top.png),
-        url(../img/map.png);
+        url(/img/bg-top.png),
+        url(/img/map.png);
     background-position:
         center top,
         center center;
