theme image added

--- a/src/globals/style.css
+++ b/src/globals/style.css
@@ -24,7 +24,7 @@
 [data-theme='dark'] {
   --primary-color: #44046e;
   --secondary-color: #A9A9A9;
-  --background-color: #2b2a2a;
+  --background-color: #272525;
   --surface-color: #1E1E1E;
   --text-color: #E0E0E0;
   --text-color2: #292929;
