--- a/src/components/ThemeToggle/ThemeToggle.module.css
+++ b/src/components/ThemeToggle/ThemeToggle.module.css
@@ -1,13 +1,13 @@
 .ThemeBtn {
     color: var(--text-color);
-    background-color: var(--background-color);
+    background-color: var(--navbar-color);
     visibility: visible;
     font-weight: bold;
     box-shadow: 0 0 10px var(--text-color2) !important;
-    transition: background-color 0.3s, color 0.3s;
+    transition: 0.5s;
 }
 
 .ThemeBtn:hover {
     color: var(--text-color);
-    background-color: var(--background-color);
+    background-color: var(--card-bg-color);
 }
