--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--light);
+    color: var(--white-color);
     border: 1px solid rgba(256, 256, 256, .1);
     border-radius: 40px;
     transition: .3s;
@@ -48,7 +48,7 @@
     margin-bottom: 10px;
     padding: 0;
     text-align: left;
-    color: var(--light);
+    color: var(--white-color);
     font-weight: normal;
     transition: .3s;
 }
@@ -73,7 +73,7 @@
 }
 
 .footer .copyright a {
-    color: var(--light);
+    color: var(--white-color);
 }
 
 .footer .footerMenu a {
@@ -90,7 +90,7 @@
 
 .footer .copyright a:hover,
 .footer .footerMenu a:hover {
-    color: var(--secondary);
+    color: var(--white-color);
 }
 
 /*** Section Title ***/
@@ -100,7 +100,7 @@
     align-items: center;
     font-weight: 500;
     text-transform: uppercase;
-    color: var(--surface-color);
+    color: var(--white-color);
 }
 
 .SectionTitle span:first-child,
@@ -136,9 +136,9 @@
 .SectionTitle span:last-child,
 .SectionTitle span:first-child::after,
 .SectionTitle span:last-child::after {
-    background: var(--surface-color);
+    background: var(--white-color);
 }
 
 .Color {
-    color: var(--surface-color);
+    color: var(--white-color);
 }
