--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,4 +1,5 @@
 .Spinner {
     background-color: var(--primary-color) !important;
     color: var(--surface-color) !important;
+    z-index: 9999;
 }
