hoem page updated and tailwind css removed

--- a/src/globals/style.css
+++ b/src/globals/style.css
@@ -1,6 +1,8 @@
+/* 
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; 
+*/
 
 /*@media (prefers-color-scheme: dark) {
 
@@ -58,12 +60,13 @@ body {
   color: var(--text-color);
   transition: background-color 0.3s, color 0.3s;
 }
-
+/* 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} 
+*/
 
 
 /*** Heading ***/
