--- a/src/globals/style.css
+++ b/src/globals/style.css
@@ -130,3 +130,15 @@ h6,
 .theme-color-bg {
   background-color: var(--background-color);
 }
+
+/*** Layout fix ***/
+
+@media (min-width: 1400px)
+{
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 100vw !important;
+  }
+  .w-xxl-75 {
+    width: 75% !important; 
+  }
+}
