--- a/src/components/Team/Team.module.css
+++ b/src/components/Team/Team.module.css
@@ -47,3 +47,14 @@
 .Title {
     color: var(--text-color);
 }
+
+
+@media (min-width: 1200px) {
+    .SectionTitle {
+        font-size: 1.2vw;
+    }
+
+    .Title {
+        font-size: 2vw;
+    }
+}
